removed in header news

--- a/site/index-1.html
+++ b/site/index-1.html
@@ -70,7 +70,7 @@
 								</ul>
 							</li>
 							<li><a href="index-2.html">Products</a></li>
-							<li><a href="index-3.html">News & Events</a></li>
+							<!--SASAN <li><a href="index-3.html">News & Events</a></li>-->
 							<li><a href="index-4.html">Contacts</a></li>
 						</ul>
 					</nav>
