adjusted all index sites

--- a/site/index-1.html
+++ b/site/index-1.html
@@ -69,7 +69,7 @@
 									<li><a href="#">Consultation</a></li>
 								</ul>
 							</li>
-							<li><a href="index-2.html">Products</a></li>
+							<li><a href="index-2.html">Projects</a></li>
 							<!--SASAN <li><a href="index-3.html">News & Events</a></li>-->
 							<li><a href="index-4.html">Contacts</a></li>
 						</ul>
