--- a/site/index-2.html
+++ b/site/index-2.html
@@ -72,8 +72,8 @@
 									<li><a href="#">Consultation</a></li>
 								</ul>
 							</li>
-							<li class="active"><a href="index-2.html">Products</a></li>
-							<li><a href="index-3.html">News & Events</a></li>
+							<li class="active"><a href="index-2.html">Projects</a></li>
+							<!--<li><a href="index-3.html">News & Events</a></li>-->
 							<li><a href="index-4.html">Contacts</a></li>
 						</ul>
 					</nav>
